Fix backend leak by adding DELETE workflow endpoint
Currently, new workflow instances are created every time the user navigates to a menu item, but they are never cleaned. This change aims to make memory management more safe, by adding and calling a proper DELETE endpoint, and protecting it with a secret, so not anyone can call it just the authenticated ui endpoints can use it.
